--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,6 @@ body{
     width: 50px;
     height: 8px;
     position: absolute;
-    background-image: url(../imgs/disparo.png);
+    background-image: url(../img/disparo.png)
 }
 
